Feature/endpoint detail window (#28)
* implement EndpointDetailWindow

* fix the default value for LatencyBudget qos

* implement dds listener

* clean up

--- a/resources.qrc
+++ b/resources.qrc
@@ -20,6 +20,7 @@
         <file>res/images/spinning.gif</file>
 
         <!-- source files -->
+        <file>src/views/EndpointDetailWindow.qml</file>
         <file>src/views/main.qml</file>
         <file>src/views/AddDomainView.qml</file>
         <file>src/views/Constants.qml</file>
