feature/create-writers (#40)
* create writers

* generate qml

* generate python code

* first example writing call

* enusre float and int types in qml

* first working message

* fix shutdown

* build qt datatypes for dds datatypes

* improvements

* support nested structures

* wip

* Refactoring of datamodel_model.py

* refactor dds_service

* implement send data with tree model for basic types

* implement add and remove

* fix simple data types

* use RegularExpressionValidator

* remove unused code

* fix nested arrays

* fix user input values

* show sequence position

* add support for boolean

* implement enums

* add support for typedefs

* clean up

* clean up

* clean up

* clean up

* automatically select first tester item

* add support for arrays

* precreate array elements

* add max array size

* add optional support

* hide add button when cannot add anymore immidiatly

* nested seq prep

* fix enum in array and typedefed

* initial add from network

* fixes

* fix nested array

* fixes

* fix structs without topelvel module

* fix deletion of readers

* clean up

* fix duplicate symbols

* clean up

* clean up

* fix deletion of array item

* improve naming

--- a/resources.qrc
+++ b/resources.qrc
@@ -36,6 +36,7 @@
         <file>src/views/ReaderTester.qml</file>
         <file>src/views/ListenerView.qml</file>
         <file>src/views/LoadingView.qml</file>
+        <file>src/views/TesterView.qml</file>
         <file>src/views/AboutWindow.qml</file>
         <file>src/views/CheckForUpdates.qml</file>
         <file>src/views/ParticipantsOverview.qml</file>
