--- a/resources.qrc
+++ b/resources.qrc
@@ -41,5 +41,6 @@
         <file>src/views/CheckForUpdates.qml</file>
         <file>src/views/ParticipantsOverview.qml</file>
         <file>src/views/SideView.qml</file>
+        <file>src/views/LogWindow.qml</file>
     </qresource>
 </RCC>
