implement extended shape demo

--- a/resources.qrc
+++ b/resources.qrc
@@ -43,5 +43,8 @@
         <file>src/views/SideView.qml</file>
         <file>src/views/LogWindow.qml</file>
         <file>src/views/ShapesDemoView.qml</file>
+        <file>src/views/shapes_demo/ShapesDemoCircle.qml</file>
+        <file>src/views/shapes_demo/ShapesDemoSquare.qml</file>
+        <file>src/views/shapes_demo/ShapesDemoTriangle.qml</file>
     </qresource>
 </RCC>
