--- a/resources.qrc
+++ b/resources.qrc
@@ -20,6 +20,10 @@
         <file>res/images/spinning.gif</file>
 
         <!-- source files -->
+        <file>src/views/ProcessView.qml</file>
+        <file>src/views/ParticipantView.qml</file>
+        <file>src/views/HostView.qml</file>
+        <file>src/views/EndpointView.qml</file>
         <file>src/views/EndpointDetailWindow.qml</file>
         <file>src/views/main.qml</file>
         <file>src/views/AddDomainView.qml</file>
