--- a/resources.qrc
+++ b/resources.qrc
@@ -54,5 +54,6 @@
         <file>src/views/shapes_demo/ShapesDemoSquare.qml</file>
         <file>src/views/shapes_demo/ShapesDemoTriangle.qml</file>
         <file>src/views/config_editor/ConfigEditorView.qml</file>
+        <file>src/views/nodes/Bubble.qml</file>
     </qresource>
 </RCC>
