--- a/resources.qrc
+++ b/resources.qrc
@@ -55,5 +55,6 @@
         <file>src/views/shapes_demo/ShapesDemoTriangle.qml</file>
         <file>src/views/config_editor/ConfigEditorView.qml</file>
         <file>src/views/nodes/Bubble.qml</file>
+        <file>src/views/nodes/Edge.qml</file>
     </qresource>
 </RCC>
