--- a/resources.qrc
+++ b/resources.qrc
@@ -54,6 +54,7 @@
         <file>src/views/shapes_demo/ShapesDemoSquare.qml</file>
         <file>src/views/shapes_demo/ShapesDemoTriangle.qml</file>
         <file>src/views/config_editor/ConfigEditorView.qml</file>
+        <file>src/views/nodes/ArchitectureView.qml</file>
         <file>src/views/nodes/Bubble.qml</file>
         <file>src/views/nodes/Edge.qml</file>
     </qresource>
