--- a/resources.qrc
+++ b/resources.qrc
@@ -54,5 +54,9 @@
         <file>src/views/shapes_demo/ShapesDemoSquare.qml</file>
         <file>src/views/shapes_demo/ShapesDemoTriangle.qml</file>
         <file>src/views/config_editor/ConfigEditorView.qml</file>
+        <file>src/views/nodes/NodeView.qml</file>
+        <file>src/views/nodes/NodeDetailView.qml</file>
+        <file>src/views/nodes/Node.qml</file>
+        <file>src/views/nodes/Edge.qml</file>
     </qresource>
 </RCC>
